завершена работа по загрузке постов

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
 
     <hr>
 
-    <a href="/tag" class="button">Добавить пост</a>
+    <a href="/post" class="button">Добавить пост</a>
 
 </main>
 </body>
