--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,7 @@
     <hr>
 
     <a href="/post" class="button">Добавить пост</a>
+    <a href="/all_posts" class="button">Вся лента</a>
 
 </main>
 </body>
