--- a/templates/post_by_tag.html
+++ b/templates/post_by_tag.html
@@ -15,10 +15,10 @@
 
     <div class="post">
         <img src="{{i.pic}}" width="100%" alt="">
-        <p>{{i.content}}</p>
+        <p>{{i.content}}</p><hr>
     </div>
     {% endfor %}
-    <hr>
+
 
     <a href="/post" class="button">Добавить пост</a>
 
